--- a/Excercise 2/index.html
+++ b/Excercise 2/index.html
@@ -6,21 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/index.css">
-    <title>Document</title>
+    <title>Excercise 2 Amina Amzou</title>
 </head>
 
 <body>
     <main>
         <h1>Web2 Excercise 2</h1>
-       <!-- <article>
+        <article>
             <div class="pokemon">
                 <h2 class="title">Bulbasaur</h2>
-                <img class="img" src="https://pokeapi.co/api/v2/pokemon/9/" alt="">
+                <img class="img"
+                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-viii/icons/1.png"
+                    alt="">
                 <p class="text">Grass</p>
                 <p class="text2">Poison</p>
             </div>
-        </article> -->
-        <p>Amina Amzou</p>
+        </article>
     </main>
     <script type="module" src="/index.js"></script>
 </body>
