--- a/Technical_test/index.html
+++ b/Technical_test/index.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/index.css">
-    <link href="https://gyazo.com/api/oembed?url=http://gyazo.com/XXXXXXXXXXXX" rel="alternate"
-        title="Screenshot by Gyazo" type="application/json+oembed" />
-    <title>API test Amina Amzou</title>
+    <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
+
+
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Test API</h1>
-    <p>Amina amzou</p>
 
-    <img src="" alt="" id="img">
-    <script src="/script.js"></script>
+
 </body>
+<script src="/script.js"></script>
 
 </html>
