--- a/Technical_test/photo.html
+++ b/Technical_test/photo.html
@@ -9,13 +9,15 @@
     <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
 
 
-    <title>Photobooth</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <h1> Click here to upload your picture</h1>
-    <p>you can only upload one picture</p>
-    <input type=button onClick="parent.location='photo.html'" value='click here'>
+    <h1> Click here to go back to your homepage</h1>
+    <input type=button onClick="parent.location='index.html'" value='go back'>
+
+    <img src="" id="fileObject">
 </body>
+<script src="/script.js"></script>
 
 </html>
