install filestack npm

--- a/Technical_test/index.html
+++ b/Technical_test/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/index.css">
+    <script type="module" src="/filestack-js"></script>
+    <script type="text/javascript" src="//"></script>
     <script src="//static.filestackapi.com/filestack-js/3.x.x/filestack.min.js"></script>
-
-
     <title>Photobooth</title>
 </head>
 
@@ -16,6 +16,7 @@
     <h1> Click here to upload your picture</h1>
     <p>you can only upload one picture</p>
     <input type=button onClick="parent.location='photo.html'" value='click here'>
+    <img src="/script.js" alt="">
 </body>
 
 </html>
